crates/but-api-macros/tests/tests/ui/fail/base_permission_param_repoexclusive_shared_ref.stderr
error: Explicit repository permission parameters must use `&mut RepoExclusive` for exclusive access
 --> tests/ui/fail/base_permission_param_repoexclusive_shared_ref.rs:8:12
  |
8 |     _perm: &but_ctx::access::RepoExclusive,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
